--- a/.github/workflows/express.yml
+++ b/.github/workflows/express.yml
@@ -22,6 +22,7 @@ jobs:
       - name: Build
         uses: docker/build-push-action@v4
         with:
+          load: true
           tags: shrempf/express-docker
 
       - name: Test
