--- a/.github/workflows/express.yml
+++ b/.github/workflows/express.yml
@@ -22,9 +22,16 @@ jobs:
       - name: Build
         uses: docker/build-push-action@v4
         with:
+          file: Dockerfile.dev
           load: true
-          tags: shrempf/express-docker
+          tags: shrempf/express-docker:test
 
       - name: Test
         run: |
-          docker run --rm shrempf/express-docker npm test
+          docker run --rm shrempf/express-docker:test
+
+      - name: Publish
+        uses: docker/build-push-action@v4
+        with:
+          push: true
+          tags: shrempf/express-docker:latest
