--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -6,8 +6,8 @@ RUN mkdir -p /home/node/app
 WORKDIR '/home/node/app'
 
 COPY --chown=node:node ./package.json ./
-RUN npm install --omit=dev
+RUN npm install
 
 COPY --chown=node:node ./ ./
 
-CMD ["npm", "start"]
+CMD ["npm", "run", "test"]
