Updated build script

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -5,8 +5,8 @@ RUN mkdir -p /home/node/app
 
 WORKDIR '/home/node/app'
 
-COPY --chown=node:node ./package.json ./
-RUN npm install
+COPY --chown=node:node ./package.json ./package-lock.json ./
+RUN npm ci
 
 COPY --chown=node:node ./ ./
 
