--- a/.github/workflows/express.yml
+++ b/.github/workflows/express.yml
@@ -5,6 +5,13 @@ on:
     branches:
       - master
 
+env:
+  AWS_REGION: "ap-southeast-1"
+
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -35,3 +42,18 @@ jobs:
         with:
           push: true
           tags: shrempf/express-docker:latest
+
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v2.2.0
+        with:
+          role-to-assume: arn:aws:iam::868133316193:role/GitHubAction-AssumeRoleWithAction
+          role-session-name: GitHub_to_AWS_via_FederatedOIDC
+          aws-region: ${{ env.AWS_REGION }}
+
+      - name: Generate deployment package
+        run: zip -r deploy.zip "docker-compose.yml" ".ebextensions"
+
+      - name: Generate Version Label
+        id: generate_version_label
+        run: |
+          echo "version_label=$(date +'%Y%m%d%H%M%S')-${GITHUB_REF#refs/heads/}" >> $GITHUB_OUTPUT
