--- a/.github/workflows/express.yml
+++ b/.github/workflows/express.yml
@@ -60,3 +60,16 @@ jobs:
         id: generate_version_label
         run: |
           echo "version_label=$(date +'%Y%m%d%H%M%S')-${GITHUB_REF#refs/heads/}" >> $GITHUB_OUTPUT
+
+      - name: Deploy to EB
+        uses: einaregilsson/beanstalk-deploy@v21
+        with:
+          aws_access_key: ${{ env.AWS_ACCESS_KEY_ID }}
+          aws_secret_key: ${{ env.AWS_SECRET_ACCESS_KEY }}
+          aws_session_token: ${{ env.AWS_SESSION_TOKEN }}
+          application_name: express-elastic
+          environment_name: express-elastic-dev
+          version_label: ${{ steps.generate_version_label.outputs.version_label }}
+          version_description: ${{ GITHUB.SHA }}
+          region: ${{ env.AWS_REGION }}
+          deployment_package: deploy.zip
