--- a/.elasticbeanstalk/config.yml
+++ b/.elasticbeanstalk/config.yml
@@ -1,6 +1,6 @@
 branch-defaults:
   default:
-    environment: express-elastic-dev
+    environment: null
     group_suffix: null
 global:
   application_name: express-elastic
